# deds_datawarehouse

./: .gitignore  Datavisualitatie.pbix  README.md  go_dwh_tables.sql
datawarehouse/: pyproject.toml
datawarehouse/src/: .env.local.example  dashboard.py  go_dwh.ipynb  go_dwh.py
